# symposium

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  WIP.md  book.toml  symposium.code-workspace  test_discovery.sh  test_structure.rs
.agents/skills/: .gitignore
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-code-review-instructions.md
.github/workflows/: ci.yml  deploy-book.yml  release-binaries.yml  release-plz.yml
.sparkle-space/: working-memory.json
cargo-agents-testlib/: Cargo.toml  build.rs
cargo-agents-testlib/src/: lib.rs
ci/: sync-versions.sh
md/: SUMMARY.md  about.md  adding-plugin.md  auto-discovery.md  configuration.md  contribute.md  custom-plugin-source.md  defining-skills.md  how-it-works.md  install-other.md  install-vscode.md  install.md  installing-plugins.md  introduction.md  start.md  usage-patterns.md  workspace-skills.md  workspace.md
opencode-plugin/: package.json
setup/: Cargo.toml
setup/src/: acp.rs  main.rs  vscode.rs  zed.rs
src/: advice_for.rs  agents.rs  cargo_fmt.rs  cli.rs  config.rs  crate_command.rs  crate_metadata.rs  discovery.rs  dispatch.rs  distribution.rs  git_source.rs  help_render.rs  hook.rs  hook_schema.rs  init.rs  install.rs  installation.rs  lib.rs  main.rs  mcp.rs  output.rs  plugins.rs  predicate.rs  report.rs  runtime_predicate.rs  search_command.rs  self_update.rs  session_state.rs  shell_predicate.rs  skills.rs  start.rs  state.rs  status.rs  status_command.rs  subcommand_dispatch.rs  sync.rs  telemetry.rs  test_utils.rs  use_command.rs  workspace.rs  (+1 more)
src/rust-crate-sources-proxy/: Cargo.toml
src/rust-crate-sources-proxy/src/: lib.rs  main.rs
src/rust-crate-sources-proxy/src/eg/: error.rs  mod.rs
src/rust-crate-sources-proxy/src/eg/rust/: cache.rs  extraction.rs  mod.rs  search.rs  version.rs
src/symposium-acp/: Cargo.toml
src/symposium-acp-agent/: CHANGELOG.md  Cargo.toml
src/symposium-acp-agent/examples/: vscodelm_cli.rs
src/symposium-acp-agent/src/: builtin_recommendations.toml  config.rs  lib.rs  main.rs  recommendations.rs  registry.rs  remote_recommendations.rs  symposium.rs  user_config.rs  vscodelm.rs
src/symposium-acp-agent/src/config_agent/: conductor_actor.rs  config_mode_actor.rs  mod.rs  tests.rs  uberconductor_actor.rs
src/symposium-acp-agent/src/vscodelm/: history_actor.rs  mod.rs  session_actor.rs  tests.rs  vscode_tools_mcp.rs
src/symposium-acp-agent/src/vscodelm/session_actor/: request_response.rs
src/symposium-acp-agent/tests/: mcp_servers.rs
src/symposium-acp-proxy/: CHANGELOG.md  Cargo.toml
src/symposium-acp-proxy/src/: lib.rs  main.rs
src/symposium-acp/src/: lib.rs  logging.rs  main.rs
src/symposium-acp/tests/: logging_test.rs
src/symposium-benchmark/: Cargo.toml
src/symposium-benchmark/src/: main.rs
src/symposium-crate-sources-proxy/: CHANGELOG.md  Cargo.toml
src/symposium-crate-sources-proxy/src/: crate_research_mcp.rs  crate_sources_mcp.rs  lib.rs  research_agent.rs
src/symposium-crate-sources-proxy/tests/: basic_integration.rs
src/symposium-ferris/: CHANGELOG.md  Cargo.toml
src/symposium-ferris/src/: error.rs  lib.rs  main.rs
src/symposium-ferris/src/crate_sources/: cache.rs  mcp.rs  mod.rs  version.rs
src/symposium-ferris/src/mcp/: mod.rs
src/symposium-ferris/src/rust/: extraction.rs  mod.rs
src/symposium-ferris/src/rust_researcher/: mod.rs  sub_agent_mcp.rs
src/symposium-math/: Cargo.toml
src/symposium-math/src/: server.rs
src/symposium-recommendations/: CHANGELOG.md  Cargo.toml
src/symposium-recommendations/src/: lib.rs  source.rs
symposium-acp/: Cargo.toml
symposium-artifacts/: CHANGELOG.md
symposium-hook/: Cargo.toml
symposium-hook/examples/: acquire_helper.rs  block_destructive.rs  inject_context.rs
symposium-hook/src/: lib.rs
symposium-install/: CHANGELOG.md  Cargo.toml
symposium-install/src/: git.rs  lib.rs
symposium-schema/: Cargo.toml
symposium-schema/src/: lib.rs
symposium-sdk/: CHANGELOG.md  Cargo.toml
symposium-sdk/src/: dirs.rs  hook.rs  lib.rs  predicate.rs  workspace.rs
symposium-testlib/: Cargo.toml
symposium-testlib/src/: lib.rs
symposium/conductor/: Cargo.toml
symposium/conductor/src/: component.rs  conductor.rs  conductor_tests.rs  lib.rs  main.rs  mcp_bridge.rs  mcp_bridge_rmcp_test.rs
symposium/conductor/src/conductor/: mcp_bridge.rs
symposium/conductor/tests/: initialization_sequence.rs  mcp-integration.rs  mcp_bridge_end_to_end.rs
symposium/conductor/tests/mcp_bridge_end_to_end_helpers/: mock_agent.rs  mock_proxy.rs
symposium/conductor/tests/mcp_integration/: agent.rs  mcp_server.rs  proxy.rs
symposium/scp/: Cargo.toml  README.md
symposium/scp/src/: acp.rs  capabilities.rs  jsonrpc.rs  lib.rs  mcp_over_acp.rs  proxy.rs  util.rs
symposium/scp/src/acp/: agent.rs  agent_to_client.rs  client.rs  client_to_agent.rs  editor.rs  enum_impls.rs  server.rs
symposium/scp/src/acp/agent/: notifications.rs  requests.rs
symposium/scp/src/acp/agent_to_client/: notifications.rs  requests.rs
symposium/scp/src/acp/client_to_agent/: notifications.rs  requests.rs
symposium/scp/src/acp/editor/: notifications.rs  requests.rs
symposium/scp/src/acp/server/: notifications.rs
symposium/scp/src/jsonrpc/: actors.rs  handlers.rs
symposium/scp/src/proxy/: conductor.rs  messages.rs  on_receive_from_successor.rs  send_request_to_successor.rs
symposium/scp/tests/: TEST_LIST.md  jsonrpc_advanced.rs  jsonrpc_edge_cases.rs  jsonrpc_error_handling.rs  jsonrpc_handler_chain.rs  jsonrpc_hello.rs
symposium/sparkle-acp-proxy/: Cargo.toml
symposium/sparkle-acp-proxy/src/: main.rs
tests/: cargo_format.rs  custom_predicates.rs  dispatch.rs  enablement.rs  help_render.rs  hook_activation.rs  hook_agent.rs  hook_events_doc.rs  hook_format_priority.rs  hook_nudge.rs  init_sync.rs  install_uninstall.rs  integration.rs  plugin_dispatch.rs  skill_sync_options.rs  subcommand_dispatch.rs  telemetry_emit.rs
theme/: custom.css
vscode-extension/: .gitignore  .vscode-test.mjs  LICENSE  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+498 files in other folders)
