[package]
name = "symposium"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "AI the Rust Way"
repository = "https://github.com/symposium-dev/symposium"
readme = "README.md"

[[bin]]
name = "symposium"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
dirs = "6"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sacp = "11"
sacp-tokio = "11"
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
serde_json = "1.0.149"

[dev-dependencies]
assert_matches = "1.5"
tempfile = "3.6"
