[package]
name = "symposium"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "AI the Rust Way"
repository = "https://github.com/symposium-dev/symposium"
readme = "README.md"

[lib]
name = "symposium"
path = "src/lib.rs"

[[bin]]
name = "symposium"
path = "src/bin/symposium.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
cargo_metadata = "0.18"
chrono = "0.4"
crates_io_api = { version = "0.12", default-features = false, features = ["rustls"] }
dirs = "6"
flate2 = "1.0"
indoc = "2.0"
home = "0.5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sacp = "11"
semver = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
bytes = "1.11.1"
dialoguer = "0.12.0"
toml_edit = "0.25.11"


[dev-dependencies]
assert_matches = "1.5"
expect-test = "1.5.1"
indoc = "2.0.7"
serde_yaml_ng = "0.10"
symposium-testlib = { path = "symposium-testlib" }

[workspace]
members = [".", "symposium-testlib"]
