[package]
name = "setup"
version = "0.1.0"
edition = "2024"
authors = ["Niko Matsakis"]
description = "Dialectic development setup tool"
publish = false

[[bin]]
name = "setup"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json5 = "0.4"

# Additional dependencies for setup functionality
which = { workspace = true }

[dev-dependencies]
serde_jsonc = "1"
