[package]
name = "symposium-hook"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "SDK for writing symposium hook handlers in Rust"
repository = "https://github.com/symposium-dev/symposium"

[features]
clap = ["dep:clap"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"], optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
