[package]
name = "symposium-install"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Acquisition and caching of tool binaries for symposium plugins"
repository = "https://github.com/symposium-dev/symposium"

[features]
clap = ["dep:clap"]

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3.6"
tokio = { version = "1", features = ["macros", "rt"] }
tracing = "0.1"
