[package]
name = "symposium-schema"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Hook payload types for Symposium"
repository = "https://github.com/symposium-dev/symposium"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
