[package]
name = "symposium-testlib"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Integration test harness for symposium"
repository = "https://github.com/symposium-dev/symposium"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
symposium = { path = ".." }
tempfile = "3.6"
acpr = "0.2"
anyhow = "1.0.102"
sacp = "11"
sacp-tokio = "11"
tokio = { version = "1", features = ["macros"] }
toml = "0.8"
