[package]
name = "symposium-acp-agent"
version = "3.0.0"
edition = "2024"
license = "Apache-2.0"
description = "Symposium-enriched ACP agent that wraps downstream agents with enhanced capabilities"
repository = "https://github.com/symposium-dev/symposium"
homepage = "https://symposium-dev.github.io/symposium/"
readme = "README.md"

[[bin]]
name = "symposium-acp-agent"
path = "src/main.rs"

[[bin]]
name = "mcp-test-server"
path = "src/bin/mcp-test-server.rs"

[dependencies]
sacp-conductor.workspace = true
sacp.workspace = true
sacp-tokio.workspace = true
sacp-rmcp.workspace = true
sacp-tee.workspace = true
rmcp.workspace = true
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Symposium proxy components are installed at runtime via cargo distribution

# Built-in agents
elizacp.workspace = true
chrono = "0.4"
uuid = { workspace = true, features = ["v4"] }
futures-concurrency = "7"
futures = "0.3"

# Configuration
serde_jsonc = "1"
shell-words = "1"
dirs = "5"
toml = "0.8"
sha2 = "0.10"
symposium-recommendations = { path = "../symposium-recommendations" }

# Registry
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
url = "2"
flate2 = "1"
tar = "0.4"
zip = "2"
fxhash.workspace = true
regex = "1.12.2"
cargo_metadata = "0.23"
which = "8"

[[example]]
name = "vscodelm_cli"
path = "examples/vscodelm_cli.rs"

[dev-dependencies]
expect-test.workspace = true
serial_test = "3.3.1"
tempfile = "3"
