[package]
name = "symposium-acp-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "symposium_acp_proxy"
path = "src/lib.rs"

[[bin]]
name = "symposium-acp-proxy"
path = "src/main.rs"

[dependencies]
sacp-conductor.workspace = true
sacp.workspace = true
sacp-tokio.workspace = true
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
futures = "0.3"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["compat"] }

# Proxy components
symposium-crate-sources-proxy = { path = "../symposium-crate-sources-proxy" }
sacp-tee.workspace = true
sparkle.workspace = true
