[package]
name = "symposium-acp-proxy"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Symposium ACP proxy - orchestrates component chains to enrich agent capabilities"
repository = "https://github.com/symposium-dev/symposium"
homepage = "https://symposium-dev.github.io/symposium/"
readme = "README.md"

[lib]
name = "symposium_acp_proxy"
path = "src/lib.rs"

[[bin]]
name = "symposium-acp-proxy"
path = "src/main.rs"

[dependencies]
sacp-conductor.workspace = true
sacp.workspace = true
sacp-tokio.workspace = true
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
futures = "0.3"
chrono = "0.4"
tokio-util = { version = "0.7", features = ["compat"] }

# Proxy components
symposium-ferris = { path = "../symposium-ferris", version = "1.0.1" }
symposium-cargo = "0.2.0"
sacp-tee.workspace = true
sparkle.workspace = true
