[package]
name = "symposium-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
# Symposium components
symposium-crate-sources-proxy = { path = "../symposium-crate-sources-proxy" }

# ACP framework
sacp.workspace = true
sacp-tokio.workspace = true
sacp-conductor.workspace = true
sacp-tee.workspace = true
yopo.workspace = true

# Async runtime
tokio.workspace = true
tokio-util = { workspace = true, features = ["compat"] }

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"

# CLI parsing
clap.workspace = true

# Utilities
dirs = "5"
