[package]
name = "symposium-crate-sources-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "symposium-crate-sources-proxy"
path = "src/main.rs"

[dependencies]
# ACP proxy framework
sacp-proxy.workspace = true
sacp.workspace = true
sacp-conductor.workspace = true
sacp-rmcp.workspace = true

# MCP SDK
rmcp = { workspace = true, features = ["server"] }

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures.workspace = true
jsonrpcmsg.workspace = true

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Rust crate extraction dependencies
regex = "1.10"
semver = "1.0"
cargo_metadata = "0.18"
flate2 = "1.0"
tar = "0.4"
crates_io_api = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
home = "0.5"
dirs = "5.0"
sacp-tokio.workspace = true
