[package]
name = "symposium-crate-sources-proxy"
version = "1.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
description = "ACP proxy component providing Rust crate source code research tools"
repository = "https://github.com/symposium-dev/symposium"
homepage = "https://symposium-dev.github.io/symposium/"
readme = "README.md"

[[bin]]
name = "symposium-crate-sources-proxy"
path = "src/main.rs"

[dependencies]
# ACP proxy framework
sacp.workspace = true
sacp-conductor.workspace = true

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures.workspace = true
jsonrpcmsg.workspace = true

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# String formatting
indoc = "2.0"

# Rust crate extraction dependencies
regex = "1.10"
semver = "1.0"
cargo_metadata = "0.18"
flate2 = "1.0"
tar = "0.4"
crates_io_api = { version = "0.12", default-features = false, features = ["rustls"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
home = "0.5"
dirs = "5.0"
sacp-tokio.workspace = true
fxhash.workspace = true

[dev-dependencies]
elizacp.workspace = true
yopo.workspace = true
expect-test = "1.5"
