[package]
name = "symposium-recommendations"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "Recommendation types and parsing for Symposium agent mods"
repository = "https://github.com/symposium-dev/symposium"
homepage = "https://symposium-dev.github.io/symposium/"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
anyhow = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
